Fix LoadDataWithBaseUrlTest.testloadDataWithBaseUrlCallsOnPageStarted after r474498.

The problem is that NavigationControllerImpl::GetEntryWithUniqueID doesn't return the pending entry; GetPendingEntry has to be checked as well.

BUG=726230
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_site_isolation

Review-Url: https://codereview.chromium.org/2903263002
Cr-Commit-Position: refs/heads/master@{#474758}

Former-commit-id: 20e172c34b3685b8f8e6d212c866742ba729d007